// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-select multi select dropdown #render help multi select should render component as expected 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-above gux-form-field-legend-label">
        <slot name="label"></slot>
        <gux-screen-reader-beta>
          This is a help message
        </gux-screen-reader-beta>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown-multi-beta>
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-describedby="gux-help-i" aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label id="gux-label-i" slot="label">
    Default
  </label>
  <span id="gux-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render help should render component as expected 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-above gux-form-field-legend-label">
        <slot name="label"></slot>
        <gux-screen-reader-beta>
          This is a help message
        </gux-screen-reader-beta>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown>
    <mock:shadow-root>
      <gux-popup>
        <div class="gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup>
    </mock:shadow-root>
    <gux-listbox aria-describedby="gux-help-i" aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Default
  </label>
  <span id="gux-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render input attributes should render component as expected (1) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-above gux-form-field-legend-label">
        <slot name="label"></slot>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown-multi-beta>
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label id="gux-label-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render input attributes should render component as expected (2) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-above gux-form-field-legend-label">
        <slot name="label"></slot>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-disabled gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown-multi-beta disabled="">
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup disabled="">
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" disabled="" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label id="gux-label-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render input attributes should render component as expected (3) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-above gux-form-field-legend-label gux-required">
        <slot name="label"></slot>
        <gux-screen-reader-beta>
          Required
        </gux-screen-reader-beta>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown-multi-beta required="">
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label id="gux-label-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render label-position should render component as expected (1) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-above gux-form-field-legend-label">
        <slot name="label"></slot>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown-multi-beta>
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label id="gux-label-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render label-position should render component as expected (2) 1`] = `
<gux-form-field-dropdown label-position="above">
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-above gux-form-field-legend-label">
        <slot name="label"></slot>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown-multi-beta>
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label id="gux-label-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render label-position should render component as expected (3) 1`] = `
<gux-form-field-dropdown label-position="beside">
  <mock:shadow-root>
    <fieldset class="gux-beside gux-form-field-fieldset-container">
      <legend class="gux-beside gux-form-field-legend-label">
        <slot name="label"></slot>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown-multi-beta>
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label id="gux-label-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render label-position should render component as expected (4) 1`] = `
<gux-form-field-dropdown label-position="screenreader">
  <mock:shadow-root>
    <fieldset class="gux-form-field-fieldset-container gux-screenreader">
      <legend class="gux-form-field-legend-label gux-screenreader">
        <slot name="label"></slot>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown-multi-beta>
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-multiselectable="true" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <mock:shadow-root>
          <svg class="gux-checkbox-container" viewBox="1 1 13 13" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z" fill-rule="evenodd"></path>
          </svg>
          <gux-truncate gux-slot-container="">
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label id="gux-label-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select single select dropdown #render input attributes should render component as expected (1) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-above gux-form-field-legend-label">
        <slot name="label"></slot>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown>
    <mock:shadow-root>
      <gux-popup>
        <div class="gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup>
    </mock:shadow-root>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select single select dropdown #render input attributes should render component as expected (2) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-above gux-form-field-legend-label">
        <slot name="label"></slot>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-disabled gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown disabled="">
    <mock:shadow-root>
      <gux-popup disabled="">
        <div class="gux-disabled gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" disabled="" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup>
    </mock:shadow-root>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select single select dropdown #render input attributes should render component as expected (3) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-above gux-form-field-legend-label gux-required">
        <slot name="label"></slot>
        <gux-screen-reader-beta>
          Required
        </gux-screen-reader-beta>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown required="">
    <mock:shadow-root>
      <gux-popup>
        <div class="gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup>
    </mock:shadow-root>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select single select dropdown #render label-position should render component as expected (1) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-above gux-form-field-legend-label">
        <slot name="label"></slot>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown>
    <mock:shadow-root>
      <gux-popup>
        <div class="gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup>
    </mock:shadow-root>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select single select dropdown #render label-position should render component as expected (2) 1`] = `
<gux-form-field-dropdown label-position="above">
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-above gux-form-field-legend-label">
        <slot name="label"></slot>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown>
    <mock:shadow-root>
      <gux-popup>
        <div class="gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup>
    </mock:shadow-root>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select single select dropdown #render label-position should render component as expected (3) 1`] = `
<gux-form-field-dropdown label-position="beside">
  <mock:shadow-root>
    <fieldset class="gux-beside gux-form-field-fieldset-container">
      <legend class="gux-beside gux-form-field-legend-label">
        <slot name="label"></slot>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown>
    <mock:shadow-root>
      <gux-popup>
        <div class="gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup>
    </mock:shadow-root>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select single select dropdown #render label-position should render component as expected (4) 1`] = `
<gux-form-field-dropdown label-position="screenreader">
  <mock:shadow-root>
    <fieldset class="gux-form-field-fieldset-container gux-screenreader">
      <legend class="gux-form-field-legend-label gux-screenreader">
        <slot name="label"></slot>
      </legend>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <gux-dropdown>
    <mock:shadow-root>
      <gux-popup>
        <div class="gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup>
    </mock:shadow-root>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <mock:shadow-root>
          <gux-truncate>
            <slot></slot>
          </gux-truncate>
        </mock:shadow-root>
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label id="gux-label-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;
